--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=sol
+
+# .env file
+spring.config.import=optional:file:.env[.properties]
+
+# mongodb
+spring.data.mongodb.uri=mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}@sols.hjrss.mongodb.net/?retryWrites=true&w=majority&appName=sols
+spring.data.mongodb.database=sols
