--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.config.import=optional:file:.env[.properties]
 # mongodb
 spring.data.mongodb.uri=mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}@sols.hjrss.mongodb.net/?retryWrites=true&w=majority&appName=sols
 spring.data.mongodb.database=sols
+
+# image upload size
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
